--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,11 @@
     font-family: 'Mochiy Pop One', sans-serif;
 }
 body{
-    background-image: url("../images/books.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+        background-image: url("../images/books3.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
 }
 /* --------------  HEADER  ------------------ */
 .header{
@@ -55,25 +55,32 @@ body{
     align-items: center;
     background-color: #ffffffa1;
     border-radius: 10px;
-    height: 550px;
+    height: 650px;
+    width: 1000px;
     padding: 50px;
-}
-.contenedor__form p{
-    font-size: 30px;
-    font-weight: 800;
-    margin-bottom: 20px;
+    margin: auto;
 }
 .contenedor__video p, .kids__title, .title__bestsellers{
     font-size: 30px;
     font-weight: 800;
 }
+.contenedor__video p{
+    margin-bottom: 20px
+}
+.anima{
+    display: inline-block;
+    margin: 0 0.5rem;
+    animation-duration: 2s;
+  }
 .contenedor__video div{
-    height: 550px;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 50px 1fr;
-    grid-gap: 10px;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    font-size: 0;
+	position: relative;
+	overflow: hidden;
+	padding-bottom: 0.4rem;
 }
 .contenedor__video iframe{
     height: -webkit-fill-available;
@@ -89,7 +96,7 @@ body{
                         "footer footer footer";
 }
 .contenedor__bestsellers{
-    grid-column: cont;
+    grid-area: cont;
     justify-items: center;
     align-items: center;
     margin: 50px;
@@ -98,7 +105,6 @@ body{
 .comments__bestsellers{
     height: 300px;
     overflow-y: scroll;
-    grid-area: infocom;
 }
 .comments__bestsellers ol{
     display: flex;
@@ -111,74 +117,27 @@ body{
 .responsive__bestsellers{
     display: none;
 }
-.books__bestsellers{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto auto auto;
-    grid-template-areas:    ".title title ."
-                            "bs pd plot com"
-                            "infobs infopd infoplot infocom";
-    grid-gap: 20px;
-    justify-items: center;
-    align-items: center;
-    padding: 30px;
-}
 .title__bestsellers{
-    grid-area: title;
     padding: 20px;
 }
-.bestsellers{
-    grid-area: bs;
-}
-.date{
-    grid-area: pd;
-}
-.plot__bestsellers{
-    grid-area: plot;
-}
-.comments{
-    grid-area: com;
-}
-.info__bestsellers{
-    grid-area: infobs;
-}
-.info__date{
-    grid-area: infopd;
-}
 .info__plot{
-    grid-area: infoplot;
     overflow-y: scroll;
     max-height: 300px;
+    display: flex;
 }
-/* ---------------    GENRE     -------------- */
+td{
+    padding: 20px;
+}
+tr{
+    margin: 20px;
+}
 
+/* ---------------    GENRE     -------------- */
 #genre{
     display: grid;
     grid-template-areas: "nav nav nav "
                         "cont cont cont"
                         "footer footer footer";
-}
-.books__genre{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto auto auto;
-        grid-template-areas:    "title title"
-                                "bs pd"
-                                "infobs infopd";
-        grid-gap: 20px;
-        justify-items: center;
-        align-items: center;
-        padding: 30px;
-}
-.books_genre2{
-    display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto;
-        grid-template-areas:"infobs infopd";
-        grid-gap: 20px;
-        justify-items: center;
-        align-items: center;
-        padding: 30px;
 }
 .titles{
     font-size: 20px;
@@ -190,8 +149,8 @@ body{
     width: 600px;
     margin: auto;
 }
-.books_genre2 .info__date ul li{
-    margin-bottom: 10px;
+.contenedor__genre__responsive{
+    display: none;
 }
 /* ----------------      KIDS     ------------------ */
 #kids{
@@ -202,24 +161,30 @@ body{
 }
 .contenedor__kids{
     grid-area: cont;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 100px 1fr 1fr 1fr;
-    width: 1000px;
+    width: 70vw;
     margin: auto;
+    display: flex;
     align-items: center;
-    justify-items: center;
+    flex-direction: column;
 }
 .contenedor__kids div{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 .contenedor__kids p{
     padding: 40px;
 }
+.kids__subtitle{
+    font-size: 20px;
+}
 .contenedor__kids img{
     width: 500px;
+    transition: all .5s ease-in-out;
+}
+.contenedor__kids img:hover {
+    transform: scale(1.1);
 }
 /* -----------   CONTACT   ------------ */
 #contenedorContact{
@@ -232,39 +197,18 @@ body{
     grid-area: form;
     margin: 10px;
 }
-.contenedor__form{
-    display: grid;
-    grid-template-columns: 110px 1fr;
-    grid-template-rows: auto;
-    grid-gap: 10px;
-    padding: 30px;
-}
-.contenedor__form label {
-    grid-column: 1 / 2;
-    display: flex;
-    justify-content: end;
-    align-items: center;
+.contenedor__form p{
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 20px;
 }
  .contenedor__form p, .title__bestsellers{
     justify-content: center;
     display: flex;
  }
-.contenedor__form input,
-.contenedor__form .button, 
-.contenedor__form select,
-.contenedor__form textarea {
-    grid-column: 2 / 3;
-}
-.contenedor__form .button, .contenedor__form p, .contenedor__form__checkbox{
-    grid-column: 1/ 3;
-}
 .contenedor__form__checkbox{
     display: flex;
     flex-direction: column;
-}
-.contenedor__form__checkbox div{
-    display: flex;
-    align-items: center;
 }
 .contenedor__form__checkbox label {
     margin-right: 10px;
@@ -277,16 +221,37 @@ body{
 .contenedor__form textarea::placeholder, .contenedor__form input::placeholder{
     color: initial;
 }
-.contenedor__form textarea, .contenedor__form select, .contenedor__form .email{
-    padding: 10px;
-}
 .contenedor__form .button{
+    margin: 20px;
     padding: 5px;
+    border: 1px solid rgb(14 49 71);
+    color: lightslategrey;
+    background: linear-gradient( 
+    135deg, rgb(173,208,236,0.2) 0%,rgb(120,171,216,0.2) 100%);
 }
 .contenedor__form .button__submit{
-    background: #000000c2;
-    color: white;
+    color: black;
     padding: 10px 50px 10px 50px;
+    border: 1px solid #bdbdbdc2;
+    animation: animaButton 4s linear infinite;
+    background-size: 1000% 1000%;
+    background: linear-gradient(135deg, rgb(76 186 255 / 90%) 0%,rgb(209 224 235) 100%);
+}
+.contenedor__form .button__submit:hover{
+    background: linear-gradient(135deg, rgb(132 215 107) 0%,rgb(92 164 227) 100%);
+    color: black;
+    border: none;
+}
+.contenedor__form .button__reset:hover {
+    background: linear-gradient(135deg, rgb(76 186 255 / 90%) 0%,rgb(209 224 235) 100%);
+    color: black;
+    border: none;
+}
+.contenedor__form .button__reset{
+    background: #f7f4f4c2;
+    color: #000000c2;
+    padding: 10px 50px 10px 50px;
+    border: 1px solid #bdbdbdc2;
 }
 .contenedor__form textarea:focus-visible,
 .contenedor__form select:focus-visible,
@@ -301,6 +266,38 @@ body{
 .contenedor__form option:hover{
     background: #fff;
     color: #000;
+}
+.buttons{
+    display: flex;
+    justify-content: center;
+}
+.contenedor__form{
+    padding: 20px;
+}
+.form__contact {
+    max-width: 800px;
+    margin: 0 auto;
+}
+.form__contact li{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.form__contact  li:not(:last-child) {
+    margin-bottom: 20px;
+}
+.form__contact  li label,
+.form__contact li p {
+    flex: 0 140px;
+    max-width: 220px;
+}
+    
+.form__contact  li  label + *{
+    flex: 1 0 220px;
+}
+.form__contact li input:not([type='checkbox']),
+.form__contact li textarea {
+    padding: 10px;
 }
 /* --------   FOOTER  ---------- */
 .footer{
@@ -318,6 +315,21 @@ body{
 .footer .rrss a{
     padding: 10px;
 }
+.rrss div{
+    margin: 10px;
+    transition: all .2s cubic-bezier(0.4, 0, 1, 1);
+}
+.rrss{
+    display: flex;
+}
+.rrss div:hover {
+    transform: translateY(-10px);
+}
+.footer p{
+    display: inline-block;
+    animation-duration: 1s;
+    animation: pulse;
+}
 /* -----------     MEDIA QUERIES    ------------- */
 @media all and (max-width: 1200px) {
     .bestsellers__info{
@@ -328,14 +340,20 @@ body{
     .bestsellers__info p{
         font-size: 26px;
         font-weight: 800;
-        margin-top: 40px;
+        padding: 20px;
     }
     .bestsellers__info div{
         font-size: 16px;
-        padding: 20px;
     }
     .comments__bestsellers{
         margin: 20px;
+    }
+    .contenedor__video div {
+        height: 550px;
+    }
+    .contenedor__video{
+        height: 550px;
+        width: auto;
     }
 }
 @media all and (max-width: 998px) {
@@ -350,6 +368,16 @@ body{
     }
     .contenedor__video div{
         height: fit-content;
+    }
+    .books__bestsellers{
+        display: none;
+    }
+    .responsive__bestsellers{
+        display: flex;
+        flex-direction: column;
+    }
+    .contenedor__bestsellers {
+        margin: 10px;
     }
 }
 @media all and (max-width: 767px) {
@@ -374,51 +402,18 @@ body{
     .header ul li {
         padding: 5px;
     }
-    .contenedor__form input,
-    .contenedor__form .button, 
-    .contenedor__form select,
-    .contenedor__form textarea,
-    .contenedor__form label  {
-        grid-column: 1 / 3;
-        display: block;
-    }
-    .contenedor__form {
-        grid-template-columns: auto;
-    }
     .contenedor__form p,.kids__title, .title__bestsellers{
         font-size: 20px;
         font-weight: 800;
     }
-    .books__bestsellers{
-        display: none;
-    }
-    .responsive__bestsellers{
-        display: flex;
-        flex-direction: column;
-    }
-    .contenedor__bestsellers {
-        margin: 10px;
-    }
     .contenedor__kids p {
         padding: 20px;
-    }
-    .contenedor__kids {
-        width: auto;
     }
     .contenedor__kids img{
         width: auto;
     }
-    .books__genre, .books_genre2{
-        grid-template-columns: repeat(2, 0.5fr);
-        grid-gap: 30px;
-        padding: 10px;
-    }
-    .contenedor__genre {
-        padding: 0px;
-        width: auto;
-    }
-    .info__date ul li{
-        font-size: 12px;
+    .contenedor__kids{
+        width: 94vw;
     }
 }
 @media all and (max-width: 574px){
@@ -435,7 +430,6 @@ body{
     .contenedor__bestsellers p {
         font-size: 20px;
     }
-    
 }
 @media all and (max-width: 477px){
     .footer{
@@ -452,10 +446,48 @@ body{
     .info__bestsellers {
         width: 150px;
     }
+    .titles {
+        font-size: 14px;
+    } 
     .title__bestsellers {
-        padding: 20px 0px 0px 20px;
+        font-size: 18px;
     }
-    
+    .contenedor__genre__responsive{
+        display: block;
+    }
+    .contenedor__genre__desktop{
+        display: none;
+    }
+    .books__genre{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    .books__genre p{
+        padding: 20px;
+    }
+    .info__date{
+        padding: 20px;
+    }
+    .contenedor__kids img {
+        width: 250px;
+    }
+    .kids__subtitle {
+        font-size: 12px;
+    }
+    .kids__title{
+        font-size: 16px;
+    }
+    .kids__text{
+        font-size: 10px;
+    }
+    .header {
+        margin: 0px 20px 20px 20px;
+    }
+    .contenedor__video {
+        padding: 20px 10px 20px 10px;
+    }
 }
 @media all and (max-width: 400px){
      .contenedor__video iframe{
