--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -7,6 +7,9 @@
 body{
         background-color: rgb(243, 243, 243);
 }
+.navbar{
+    z-index: 100;
+}
 .navbar-light .navbar-toggler {
      border: none; 
 }
@@ -24,19 +27,15 @@ body{
     outline: 0;
     box-shadow: 3px 5px 9px 0rem #48494a5c;
     &:focus {
-        color: $color;
-        background-color: rgba(255, 255, 255, 0.432);
-        border-color: $color;
-        outline: 0;
-        box-shadow: 3px 5px 9px 0rem #48494a5c;
+        @extend .form-control;
     }
 }
 .list-reading-books{
     align-items: center;
-    div{
+    h3{
         margin-bottom: 1.5rem;
         font-weight: bold;
-        font-size: 1.25rem!important
+        font-size: 1.25rem!important;
     }
     p{
         line-height: 2;
@@ -54,39 +53,41 @@ body{
     font-size: $font-small;
 }
 #carouselExampleCaptions{
+    padding-top: 120px;
     .carousel-caption{
     text-shadow: $shadow-text;
     bottom: 0.25rem;
     } 
     .carousel-item{
-        max-height: 500px;
+        max-height: map-get($height, l);
         img{
             display: block;
             width: 100%;
         }
         div{
-            font-weight: bolc;
+            font-weight: bold;
         }
         @media all and (max-width: 1500px){
-            max-height: 400px;
+            max-height: map-get($height, m);
         }
         @media all and (max-width: 1200px){
-            max-height: 300px;
+            max-height: map-get($height, s);
         }
         @media all and (max-width: 900px){
-            max-height: 200px;
+            max-height: map-get($height, xs);
         }
     }
 }
 #carouselExampleCaptionsResponsive{
+    padding-top: 120px;
     .carousel-caption {
         bottom: 2.25rem;
         text-shadow: $shadow-text;
     }
     .carousel-item{
-        max-height: 500px;
+        max-height: map-get($height, l);
         @media all and (max-width: $point-sm){
-            max-height: 400px;
+            max-height: map-get($height, m);
         }
     }
 } 
@@ -95,7 +96,7 @@ body{
 }
 .container-video{
     iframe{
-        height: 500px;
+        height: map-get($height, l);
         width: -webkit-fill-available;
         @media all and (max-width: $point-sm){
             height: 300px;
@@ -116,6 +117,7 @@ body{
     } 
     .text-container-video{
         font-size: 20px;
+        line-height: 2.5rem;
         @media all and (max-width: 1200px){
             font-size: 16px;
         }
@@ -127,28 +129,45 @@ body{
         }
     }
 }
+.padding-section{
+    padding-top: 150px;
+    .subtitle-genre{
+        @include fonts(1.25rem);
+    }
+    .title-list-genre{
+        @include fonts(1rem);
+    }
+}
 .title__bestsellers{
     font-size: 30px;
     font-weight: 800;
     text-shadow: $shadow-text;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     display: flex;
     justify-content: center;
     @media all and (max-width: $point-sm){
         font-size: 18px;
     }
 }
-.container__kids img{
-    width: 500px;
-    transition: all .5s ease-in-out;
-    &:hover {
-        transform: scale(1.1);
-    } 
+.container__kids{
+    h3{
+        @include fonts;
+    }
+    img{
+        width: 500px;
+        transition: all .5s ease-in-out;
+        &:hover {
+            transform: scale(1.1);
+        } 
+    }
 }
 .description{
     margin-top: 3rem;
     @media all and (max-width: $point-sm){
         font-size: $font-small;
+    }
+    h3{
+        @include fonts;
     }
 }
 .container-cards{
@@ -171,10 +190,14 @@ body{
                 background: linear-gradient(135deg, #4cbaffe6 0%,#d1e0eb);
             }
         }
+        .card-title{
+            @include fonts(1rem);
+        }
     }
     .subtitle-bestsellers{
-        font-weight: bold;
+        @include fonts;
         margin-bottom: 1.5rem;
+        display: flex;
         @media all and (max-width: $point-sm){
             font-size: $font-small;
         }
@@ -242,6 +265,11 @@ body{
         }
         @media all and (max-width: $point-sm){
             margin-top: 20px;
+        }
+        .rrss-fb{
+            background-image: url('../images/facebook.png');
+            width: 100px;
+            height: 100px;
         }
     } 
 }
