--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,9 @@
 $font-small: 14px;
+$font-medium: 1.25rem;
 $point-sm: 480px;
 $shadow-text: -1px 0px 0 #d1d1d1;
 $background-button: #5c636a;
 $color: #21252994;
 $padding-button: 10px 50px 10px 50px;
+
+$height: (l:500px, m: 400px, s: 300px , xs: 200px)
