--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,13 +42,16 @@ body {
   font-size: 1.25rem !important;
 }
 .list-reading-books p {
-  line-height: 2;
+  line-height: 3;
   margin-bottom: 3rem;
+  margin-top: 20px;
 }
 .list-reading-books .img-readingbooks {
-  width: 70%;
   display: flex;
   justify-content: center;
+}
+.list-reading-books .twobooks {
+  max-height: 700px;
 }
 
 .btn-secondary {
@@ -167,6 +170,37 @@ body {
   font-weight: bold;
 }
 
+@media all and (max-width: 767px) {
+  .header-bestsellers {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.img-bestsellers {
+  background-image: url(../images/bestsellers.svg);
+  background-repeat: no-repeat;
+  height: 500px;
+  width: auto;
+  -webkit-animation: heartbeat 2s ease-in-out infinite both;
+          animation: heartbeat 2s ease-in-out infinite both;
+}
+@media all and (max-width: 767px) {
+  .img-bestsellers {
+    background-image: url(../images/bestsellers-responsive.svg);
+    height: 400px;
+    width: 420px;
+  }
+}
+@media all and (max-width: 480px) {
+  .img-bestsellers {
+    background-image: url(../images/bestsellers-mobile.svg);
+    height: 300px;
+    width: 320px;
+  }
+}
+
 .title__bestsellers {
   font-size: 30px;
   font-weight: 800;
@@ -210,6 +244,12 @@ body {
   background-color: transparent;
   height: 100%;
 }
+.container-cards .flecha {
+  background-image: url(../images/flecha.svg);
+  background-repeat: no-repeat;
+  height: 17px;
+  width: 15px;
+}
 .container-cards .card-body {
   display: flex;
   flex-direction: column;
@@ -250,29 +290,14 @@ body {
   border: 1px solid #000000c2;
 }
 .contacto .button__submit {
-  color: #21252994;
   padding: 10px 50px 10px 50px;
   border: 1px solid #bdbdbdc2;
-  -webkit-animation: animaButton 4s linear infinite;
-          animation: animaButton 4s linear infinite;
-  background-size: 1000% 1000%;
-  background: linear-gradient(135deg, #4cbaffe6 0%, #d1e0eb 100%);
-}
-.contacto .button__submit:hover {
-  background: linear-gradient(135deg, #84d76b 0%, #5ca4e3 100%);
-  color: #21252994;
-  border: none;
 }
 .contacto .button__reset {
   background: #f7f4f4c2;
   color: #000000c2;
   padding: 10px 50px 10px 50px;
   border: 1px solid #bdbdbdc2;
-}
-.contacto .button__reset:hover {
-  background: linear-gradient(135deg, #4cbaffe6 0%, #d1e0eb 100%);
-  color: #21252994;
-  border: none;
 }
 .contacto .form-check-input:focus {
   border: none;
@@ -281,6 +306,37 @@ body {
 .contacto .form-check-input:checked {
   background-color: #5ca4e3;
   border-color: #bdbdbdc2;
+}
+
+.rrss-download {
+  width: 400px;
+}
+.rrss-download .rrss-googleplay {
+  background-image: url(../images/google-play.svg);
+  width: 64px;
+  height: 64px;
+  background-repeat: no-repeat;
+}
+.rrss-download .rrss-googleplay a {
+  width: 64px;
+  height: 64px;
+}
+.rrss-download .rrss-appstore {
+  background-image: url(../images/app-store.svg);
+  width: 64px;
+  height: 64px;
+  background-repeat: no-repeat;
+}
+.rrss-download .rrss-appstore a {
+  width: 64px;
+  height: 64px;
+}
+
+.img-banner {
+  background-image: url(../images/book.svg);
+  background-repeat: no-repeat;
+  width: 62px;
+  height: 62px;
 }
 
 @media all and (max-width: 480px) {
@@ -313,7 +369,169 @@ body {
   }
 }
 .footer .rrss .rrss-fb {
-  background-image: url("../images/facebook.png");
-  width: 100px;
-  height: 100px;
+  background-image: url(../images/facebook.svg);
+  width: 33px;
+  height: 33px;
+  background-repeat: no-repeat;
+}
+.footer .rrss .rrss-ig {
+  background-image: url(../images/instagram.svg);
+  width: 33px;
+  height: 33px;
+  background-repeat: no-repeat;
+}
+.footer .rrss .rrss-tw {
+  background-image: url(../images/twitter.svg);
+  width: 33px;
+  height: 33px;
+  background-repeat: no-repeat;
+}
+
+.color-change-2x {
+  -webkit-animation: color-change-2x 2s linear infinite alternate both;
+  animation: color-change-2x 2s linear infinite alternate both;
+}
+
+@-webkit-keyframes color-change-2x {
+  0% {
+    background: #13efff4d;
+  }
+  100% {
+    background: #c0ff2c4b;
+  }
+}
+@keyframes color-change-2x {
+  0% {
+    background: #eab91973;
+  }
+  100% {
+    background: #fffb2c60;
+  }
+}
+.color-change-2x-submit {
+  -webkit-animation: color-change-2x-submit 2s linear infinite alternate both;
+  animation: color-change-2x-submit 2s linear infinite alternate both;
+}
+
+@-webkit-keyframes color-change-2x-submit {
+  0% {
+    background: #4eca4a6c;
+  }
+  100% {
+    background: #3ea85967;
+  }
+}
+@keyframes color-change-2x-submit {
+  0% {
+    background: #19eaab5b;
+  }
+  100% {
+    background: #3292b850;
+  }
+}
+.text-focus-in {
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+          animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+}
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes heartbeat {
+  from {
+    transform: scale(1);
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+@keyframes heartbeat {
+  from {
+    transform: scale(1);
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+.slide-in-fwd-center {
+  -webkit-animation: slide-in-fwd-center 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: slide-in-fwd-center 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes slide-in-fwd-center {
+  0% {
+    transform: translateZ(-1400px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-fwd-center {
+  0% {
+    transform: translateZ(-1400px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
 }/*# sourceMappingURL=estilos.css.map */
