--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 $font-small: 14px;
 $font-medium: 1.25rem;
 $point-sm: 480px;
+$poin-lg: 767px;
 $shadow-text: -1px 0px 0 #d1d1d1;
 $background-button: #5c636a;
 $color: #21252994;
