--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,13 +5,20 @@
     font-family: 'Mochiy Pop One', sans-serif;
 }
 body{
-        background-color: rgb(243, 243, 243);
+    background-color: rgb(255, 255, 255);
+}
+p{  
+    line-height: 2rem;
+    @media all and (max-width: 500px){
+        font-size: 12px;
+    }
 }
 .navbar{
     z-index: 100;
+    box-shadow: 3px 1px 9px 0rem #48494a5c;
 }
 .navbar-light .navbar-toggler {
-     border: none; 
+    border: none; 
 }
 .navbar-expand-lg .navbar-nav .nav-link{
     padding-right: 1.5rem;
@@ -35,7 +42,11 @@ body{
     h3{
         margin-bottom: 1.5rem;
         font-weight: bold;
-        font-size: 1.25rem!important;
+        font-size: 1.25rem;
+        @media all and (max-width: 900px){
+            font-size: 1rem;
+            line-height: 2rem;
+        }
     }
     p{
         line-height: 3;
@@ -54,12 +65,20 @@ body{
     color: #ffffffbf;
     background-color: $background-button;
     font-size: $font-small;
+    &:hover{
+        color: #fff;
+        background-color: #e69699;
+    }
 }
 #carouselExampleCaptions{
     padding-top: 120px;
     .carousel-caption{
-    text-shadow: $shadow-text;
-    bottom: 0.25rem;
+        text-align: start;
+        bottom: 0.25rem;
+        p, h5{
+            color: #edededd9;
+            font-weight: normal;
+        }
     } 
     .carousel-item{
         max-height: map-get($height, l);
@@ -81,14 +100,24 @@ body{
         }
     }
 }
+.carousel-control-next, .carousel-control-prev {
+    top: 100px;  
+}
 #carouselExampleCaptionsResponsive{
     padding-top: 120px;
     .carousel-caption {
         bottom: 2.25rem;
-        text-shadow: $shadow-text;
+        text-align: start;
+        p, h5{
+            color: #edededd9;
+            font-weight: normal;
+        }
     }
     .carousel-item{
         max-height: map-get($height, l);
+        img{
+            width: 100%;
+        }
         @media all and (max-width: $point-sm){
             max-height: map-get($height, m);
         }
@@ -109,6 +138,9 @@ body{
         font-size: 30px;
         font-weight: 800;
         text-shadow: $shadow-text;
+        @media all and (max-width: $point-sm){
+            font-size: 18px;
+        }
     }
     .title-container-video{
         @media all and (max-width: 900px){
@@ -133,13 +165,7 @@ body{
     }
 }
 .padding-section{
-    padding-top: 150px;
-    .subtitle-genre{
-        @include fonts(1.25rem);
-    }
-    .title-list-genre{
-        @include fonts(1rem);
-    }
+    padding-top: 180px;
 }
 .header-bestsellers{
     @media all and (max-width: $poin-lg){
@@ -148,12 +174,35 @@ body{
         flex-direction: column;
     }
 }
+.row-header-bestsellers{
+    img{
+        max-width: 300px;
+        border-radius: 2%;
+    }
+    h3{
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+        @media all and (max-width: $poin-lg){
+            font-size: 1rem;
+        }
+        @media all and(max-width: $point-sm){
+            font-size: $font-small;
+        }
+    }
+    p{
+        @media all and (max-width: $poin-lg){
+            font-size: 13px;
+        }
+        @media all and(max-width: $point-sm){
+            font-size: 12px;
+        }
+    }
+}
 .img-bestsellers{
     background-image: url(../images/bestsellers.svg);
     background-repeat: no-repeat;
     height: 500px;
-    width: auto;
-    animation: heartbeat 2s ease-in-out infinite both;
+    width: 100%;
     @media all and (max-width: $poin-lg){
         background-image: url(../images/bestsellers-responsive.svg);
         height: 400px;
@@ -172,10 +221,16 @@ body{
     margin-bottom: 2rem;
     display: flex;
     justify-content: center;
+    line-height: 2rem;
     @media all and (max-width: $point-sm){
         font-size: 18px;
     }
 }
+// .genre-section li{
+//     font-size: 12px;
+//     font-weight: bold;
+//     line-height: 2rem;
+// }
 .container__kids{
     h3{
         @include fonts;
@@ -195,18 +250,29 @@ body{
     }
     h3{
         @include fonts;
+        line-height: 2rem;
+    }
+    li{
+        line-height: 2rem;
     }
 }
 .container-cards{
     .card{
         background-color: transparent;
         height: 100%;
+        .container-img{
+            img{
+                height: 300px;
+                object-fit: cover;
+            }
+        }
     }
     .flecha{
         background-image: url(../images/flecha.svg);
         background-repeat: no-repeat;
         height: 17px;
         width: 15px;
+        margin-left: 20px;
     }
     .card-body{
         display: flex;
@@ -218,15 +284,15 @@ body{
             transition: width 0.5s 0s ease-in, all 0.5s 0s ease-out;
             color: $color;
             &:hover{
-                color: $color;
-                padding: $padding-button;
-                background: linear-gradient(135deg, #4cbaffe6 0%,#d1e0eb);
+                color: #e69699;
             }
         }
         .card-title{
             @include fonts(1rem);
         }
-        
+        .text-muted {
+            color: #e69699!important;
+        }
     }
     .subtitle-bestsellers{
         @include fonts;
@@ -242,15 +308,18 @@ body{
     .form-control {
         background-color: transparent;
         border: 1px solid #000000c2;
-    }.button__submit{
+    }
+    .button__submit{
         padding: $padding-button;
-        border: 1px solid #bdbdbdc2;
+        color: #fff;
+        background-color: #e69699;
+        border: none;
     }
     .button__reset{
-        background: #f7f4f4c2;
-        color: #000000c2;
+        color: #fff;
+        background-color: #e69699;
         padding: $padding-button;
-        border: 1px solid #bdbdbdc2;
+        border: none;
     }
     .form-check-input{
         &:focus {
@@ -258,8 +327,8 @@ body{
             box-shadow: none;
         }
         &:checked{
-            background-color:rgb(92, 164, 227);
-            border-color: #bdbdbdc2;
+            background-color:#e69699;
+            border-color: $grey;
         }
     }
 }
@@ -289,6 +358,7 @@ body{
     height: 62px;
 }
 .footer{
+    box-shadow: 3px 1px 9px 0rem #48494a5c;
     @media all and (max-width: $point-sm){
         justify-content: space-around!important;
     }
@@ -305,7 +375,7 @@ body{
                 padding: 0.5rem;
             }
             &:hover {
-            transform: translateY(-10px);
+                transform: translateY(-10px);
             }
         }
         @media all and (max-width: $point-sm){
@@ -325,47 +395,53 @@ body{
         }
     } 
 }
-.color-change-2x{
-	-webkit-animation: color-change-2x 2s linear infinite alternate both;
-	animation: color-change-2x 2s linear infinite alternate both;
-}
- @-webkit-keyframes color-change-2x{
-    0%{
-        background: #13efff4d;
-    }
-    100%{
-        background: #c0ff2c4b;
-    }
-}
-@keyframes color-change-2x{
-    0%{
-        background: #eab91973;
-    }
-    100%{
-        background: #fffb2c60;
-    }
-}
-.color-change-2x-submit {
-	-webkit-animation: color-change-2x-submit 2s linear infinite alternate both;
-	animation: color-change-2x-submit 2s linear infinite alternate both;
-}
-@-webkit-keyframes color-change-2x-submit{
-    0% {
-        background: #4eca4a6c;
-    }
-    100% {
-        background: #3ea85967;
-    }
-}
-@keyframes color-change-2x-submit{
-    0%{
-        background: #19eaab5b;
-    }
-    100%{
-        background: #3292b850;
-}
-}
-.text-focus-in {
+// .color-change-2x{
+// 	-webkit-animation: color-change-2x 2s linear infinite alternate both;
+// 	animation: color-change-2x 2s linear infinite alternate both;
+// }
+// @-webkit-keyframes color-change-2x{
+//     0%{
+//         background: #e69699;
+//     }
+//     50%{
+//         background: #9799e9;
+//     }
+//     100%{
+//         background: #e708a44b;
+//     }
+// }
+// @keyframes color-change-2x{
+//     0%{
+//         background: #e69699;
+//     }
+//     50%{
+//         background: #9799e9;
+//     }
+//     100%{
+//         background: #e708a44b;
+//     }
+// }
+// .color-change-2x-submit {
+// 	-webkit-animation: color-change-2x-submit 2s linear infinite alternate both;
+// 	animation: color-change-2x-submit 2s linear infinite alternate both;
+// }
+// @-webkit-keyframes color-change-2x-submit{
+//     0%{
+//         background: #e69699;
+//     }
+//     100%{
+//         background: #e708a44b;
+//     }
+// }
+// @keyframes color-change-2x-submit{
+//     0%{
+//         background: #e69699;
+//     }
+//     100%{
+//         background: #e708a44b;
+//     }
+// }
+.text-focus-in{
 	animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 @-webkit-keyframes text-focus-in{
@@ -380,7 +456,7 @@ body{
         opacity: 1;
     }
 }
- @keyframes text-focus-in {
+@keyframes text-focus-in {
     0%{
         -webkit-filter: blur(12px);
         filter: blur(12px);
@@ -485,5 +561,217 @@ body{
         -webkit-transform: translateZ(0);
         transform: translateZ(0);
         opacity: 1;
+    }
+}
+.opacity-carousel{
+    background: #181d1c;
+    img{
+        opacity: .5;
+    };
+}
+.opacity{
+    .container-img{
+        background: #181d1c;
+    img {
+        opacity: 1;
+        -webkit-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+    }
+    &:hover img {
+        opacity: .5;
+    }
+    }
+}
+.genres{
+    height: 350px;
+    box-shadow: rgb(0 0 0 / 50%) 0px 2px 3px;
+    margin: 20px 0px 20px 0px;
+    transition: all 0.8s ease-in-out;
+    @media all and (max-width: 1400px){
+        height: 400px;
+    }
+    @media all and (max-width: 1200px){
+        height: 500px;
+    }
+    @media all and (max-width: 992px){
+        height: auto;
+    }
+    &:hover{
+        transform: scale(1.1);
+    }
+    .genre-title{
+        padding: 20px 0px 0px 20px;
+        color: rgb(226, 150, 128);
+    }
+    .card-body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .btn-genre{
+        padding: 20px;
+        color: #21252994;
+        text-decoration: none;
+        &:hover{
+            color: #e69699;
+        }
+    }
+}
+.bigcard-container{
+    background-color: rgb(248, 212, 199);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 100px;
+    padding-right: 100px;
+    box-shadow: rgb(0 0 0 / 50%) 0px 1px 5px;
+    border-radius: 5px;
+    width: 900px;
+    margin: 100px auto 100px auto;
+    @media all and(max-width: 998px){
+        padding-left: 60px;
+        padding-right: 60px;
+        width: auto;
+        margin: 50px auto 50px auto;
+    }
+    @media all and (max-width:576px){
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    @media all and (max-width: $point-sm){
+        padding: 10px 20px 10px 20px;
+    }
+    .bigcard-container-div1{
+        background-color: rgba(255, 255, 255, 0.85);
+        border-radius: 5px;
+        padding: 40px;
+        @media all and (max-width:576px){
+            padding: 20px;
+        }
+        p{
+            font-family: 'Poppins', sans-serif;
+        }
+        a{
+            text-decoration: none;
+            button{
+                width: 120px;
+                height: 36px;
+                background-color: #e69699;
+                color: white;
+                margin-top: 30px;
+                justify-content: center;
+                border: none;
+                box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+                align-items: center;
+                transition: all 0.5s ease-in-out;
+                &:hover{
+                    transform: scale(1.2);
+                }
+                @media all and (max-width:576px){
+                    width: 80px;
+                    height: 30px;
+                    font-size: 12px;
+                }
+            }
+            p{
+                font-family: 'Sedgwick Ave', cursive;
+                color: #e69699;
+                letter-spacing: 2px;
+            }
+        }
+    }
+}
+.thebest-container{
+    display: flex;
+    justify-content: center;
+    .opacity{
+        .container-img{
+            border-radius: 5%;            
+        }
+        a{
+            text-decoration: none;
+            .card{
+                background-color: transparent;
+                border: none;
+                img{
+                    height: 400px;
+                    object-fit: cover;
+                    border-radius: 5%;
+                    @media all and (max-width: 1200px){
+                        height: 300px;
+                    }
+                    @media all and (max-width: 998px){
+                        height: 200px;
+                    }
+                    @media all and (max-width: 767px){
+                        height: auto;
+                    }
+                }
+                .card-body{
+                    display: flex;
+                    justify-content: center;
+                    .card-title{
+                    font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+.container-kids{
+    background-image: linear-gradient(to bottom, #33ccff00 64%, #000000 104%), url(../images/kidreading.jpg);
+    width: 100%;
+    height: 80vh;
+    background-position: center;
+    display: flex;
+    align-items: flex-end;
+    @media all and (max-width: 1200px){
+        background-image: linear-gradient(to bottom, #33ccff00 64%, #000000 104%), url(../images/kidreading1.jpg);
+        height: 60vh;
+    }
+    h1{
+        color: #fffffff2;
+        font-family: 'Montserrat Alternates', sans-serif;
+        font-size: 70px;
+        letter-spacing: 10px;
+        margin-left: 100px;
+        @media all and (max-width: 1200px){
+            font-size: 50px;
+            letter-spacing: 6px;
+            margin-left: 70px;
+        }
+        @media all and (max-width: 998px){
+            font-size: 30px;
+            margin-left: 50px;
+        }
+        @media all and (max-width:576px){
+            font-size: 20px;
+            margin-left: 20px;
+            margin-bottom: 20px;
+        }
+    }
+}
+.container-kids-2{
+    margin-top: 50px;
+    .row{
+        padding: 20px;
+        h3{
+            margin-bottom: 20px;
+        }
+    }
+    .gif-kids{
+        display: flex;
+        justify-content: center;
+        img{
+            max-width: 750px;
+            @media all and (max-width: 1400px){
+                width: 600px;
+            }
+            @media all and (max-width: 1200px){
+                width: 500px;
+            }
+            @media all and (max-width: 576px){
+                width: 300px;
+            }
+        }
     }
 }
